테스트 파일 + 앱 종료 후 설정 및 스코어 저장